Add textarea element for get continuation address

--- a/src/main/webapp/html/signup.html
+++ b/src/main/webapp/html/signup.html
@@ -89,6 +89,18 @@
         <br>
         <br>
 
+        <label> Continuation address
+
+            <br>
+            <br>
+
+            <textarea rows="4" cols="50" id="continuationAddress" placeholder="Enter your continuation address"></textarea>
+        </label><br>
+        <span id="error-continuationAddress"></span>
+
+        <br>
+        <br>
+
         <input type="submit" value="Signup">
     </form>
 </div>
