Edit name of onsubmit function

--- a/src/main/webapp/html/signup.html
+++ b/src/main/webapp/html/signup.html
@@ -17,7 +17,7 @@
 
 <div class="form-group">
     <!-- edit action -->
-    <form class="form" name="signupForm" method="post" onsubmit="return validatesignupForm()">
+    <form class="form" name="signupForm" method="post" onsubmit="return validateSignupForm()">
         <label>User name
         <input type="text" name="username" placeholder="Enter your username">
         </label><br>
