--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title>Login</title>
-    <link rel="stylesheet" href="../css/login.css">
-    <script src="../js/login.js"></script>
+    <link rel="stylesheet" href="css/login.css">
+    <script src="js/login.js"></script>
 </head>
 
 <body>
