--- a/src/main/webapp/signup.html
+++ b/src/main/webapp/signup.html
@@ -16,7 +16,6 @@
 </div>
 
 <div class="form-group">
-    <!-- edit action -->
     <form class="form" name="signupForm" action="signupServlet" method="post" onsubmit="return validateSignupForm()">
         <label>User name
         <input type="text" name="username" placeholder="Enter your username">
@@ -95,7 +94,7 @@
             <br>
             <br>
 
-            <textarea rows="4" cols="50" id="continuationAddress" placeholder="Enter your continuation address"></textarea>
+            <textarea rows="4" cols="50" id="continuationAddress" name="continuationAddress" placeholder="Enter your continuation address"></textarea>
         </label><br>
         <span id="error-continuationAddress"></span>
 
